# meteor

./: .gitignore  .pre-commit-config.yaml  README.md  generate_labels.py  pyproject.toml  requirements.txt
configs/: tht_comparison.yaml  tht_validation.yaml
data/: constellation.py  demo_traffic.py  ground_stations.py  paths.py  plot_data.py  traffic.py
evaluate/: evaluate.py  plot_results.py  run_baselines.py
meteor/analysis/: __init__.py  tht.py
meteor/config/: __init__.py  constellation.py  hardware.py  orbital.py  presets.py  registry.py
meteor/constellation/: __init__.py  isl.py  kinematics.py  topology.py
meteor/ground/: __init__.py  gateways.py
meteor/utils/: __init__.py  provenance.py
scripts/: run_tht_comparison.py  run_tht_validation.py
solvers/: base.py
solvers/class_blind/: throughput_gurobi.py
solvers/ecmp/: ecmp.py
solvers/greedy/: greedy.py
solvers/lp_relax/: lp_relax.py
solvers/qos_gurobi/: qos_gurobi.py
tests/: test_constellation.py  test_paths.py  test_traffic.py
