[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteor"
version = "0.1.0"
description = "METEOR: Multi-Class Edge Traffic Engineering for Orbital Routing"
authors = [{ name = "Sam Ghalayini", email = "sghala26@student.aau.dk" }]
requires-python = ">=3.10"
readme = "README.md"

# Exact pins for reproducibility. Update via `pip install -e .[dev] --upgrade`
# and then re-pin the resolved versions here.
dependencies = [
    "numpy==1.26.4",
    "scipy==1.13.1",
    "networkx==3.3",
    "matplotlib==3.9.2",
    "pyyaml==6.0.2",
    "tqdm==4.66.5",
]

[project.optional-dependencies]
ml = [
    "torch==2.4.1",
]
solver = [
    "cvxpy==1.5.3",
    "gurobipy==11.0.3",
]
dev = [
    "pytest==8.3.3",
    "pre-commit==3.8.0",
    "ruff==0.6.8",
]
all = ["meteor[ml,solver,dev]"]

# Package discovery — the project's Python package is meteor/, scripts/ is
# a flat scripts directory not a package.
[tool.setuptools.packages.find]
include = ["meteor*"]

# ── Ruff ──────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
]
ignore = [
    "E501",   # line too long (let formatter handle it)
    "B008",   # function call in default argument (common in dataclasses)
]

[tool.ruff.lint.isort]
known-first-party = ["meteor"]

# ── Pytest ────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
